--- a/template_html/login_review.html
+++ b/template_html/login_review.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>國家衛生研究院－計畫管理系統｜登入</title>
+	<title>國家衛生研究院－計畫管理系統｜委員登入</title>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 	<meta content="" name="description" />
 	<meta content="" name="author" />
@@ -34,7 +34,7 @@
 				<div class="login-header">
 					<div class="brand">
 						<div class="d-flex align-items-center">
-							<img src="../index_list/logo_nhri_s.png"/> <b class="me-1">管理端</b> 登入
+							<img src="../index_list/logo_nhri_s.png"/> <b class="me-1">委員端</b> 登入
 						</div>
 						<small>財團法人國家衛生研究院 (NHRI) ::計畫管理系統::</small>
 					</div>
@@ -64,7 +64,7 @@
 								</label>
 							</div>
 							<div class="login-buttons">
-								<button type="submit" class="btn btn-theme h-45px d-block w-100 btn-lg" onclick="window.location.href='index_NHRI.html';">登入</button>
+								<button type="submit" class="btn btn-theme h-45px d-block w-100 btn-lg">登入</button>
 							</div>
 						</form>
 					</div>
