--- a/template_html/list_project.html
+++ b/template_html/list_project.html
@@ -1038,23 +1038,34 @@
                             <label class="form-label col-form-label col-lg-2" for="fullname">計畫期程</label>
                             <div class="col-lg-10">
                                 <div class="input-group input-daterange">
-                                    <input type="datetime-local" class="form-control" name="start" placeholder="Date Start">
+                                    <input type="date" class="form-control" name="start" placeholder="Date Start">
                                     <span class="input-group-text input-group-addon">至</span>
-                                    <input type="datetime-local" class="form-control" name="end" placeholder="Date End">
+                                    <input type="date" class="form-control" name="end" placeholder="Date End">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label class="form-label col-form-label col-lg-2" for="projectyear">計畫年度</label>
                             <div class="col-lg-10">
-                                <select class="form-select">
-                                    <option>請選擇年度</option>
-                                    <option>112</option>
-                                    <option>111</option>
-                                    <option>110</option>
-                                    <option>109</option>
-                                    <option>108</option>
-                                </select>
+								<div class="input-group input-daterange">
+                                    <select class="form-select">
+										<option>請選擇年度</option>
+										<option>112</option>
+										<option>111</option>
+										<option>110</option>
+										<option>109</option>
+										<option>108</option>
+									</select>
+                                    <span class="input-group-text input-group-addon">至</span>
+                                    <select class="form-select">
+										<option>請選擇年度</option>
+										<option>112</option>
+										<option>111</option>
+										<option>110</option>
+										<option>109</option>
+										<option>108</option>
+									</select>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group row">
