--- a/template_html/login_review.html
+++ b/template_html/login_review.html
@@ -64,7 +64,7 @@
 								</label>
 							</div>
 							<div class="login-buttons">
-								<button type="submit" class="btn btn-theme h-45px d-block w-100 btn-lg">登入</button>
+								<button type="button" class="btn btn-theme h-45px d-block w-100 btn-lg" onclick="window.location.href='review_home.html';">登入</button>
 							</div>
 						</form>
 					</div>
