--- a/template_html/list_reviewCommittee.html
+++ b/template_html/list_reviewCommittee.html
@@ -1033,7 +1033,7 @@
                 </div>
                 <div class="col-xl-6 text-end">
                     <div class="dt-buttons btn-group flex-wrap">
-                        <button class="btn btn-primary btn-sm" tabindex="0" aria-controls="data-table-buttons" type="button"><i class="fas fa-circle-plus"></i> <span>新增登錄</span></button> 
+                        <button class="btn btn-primary btn-sm" tabindex="0" aria-controls="data-table-buttons" type="button" onclick="window.location.href='cp_reviewCommittee.html';"><i class="fas fa-circle-plus"></i> <span>新增登錄</span></button> 
                         <button class="btn btn-outline-primary btn-sm" tabindex="0" aria-controls="data-table-buttons" type="button"><i class="fab fa-searchengin"></i><span>欄位查詢</span></button> 
                     </div>
 
@@ -1079,7 +1079,7 @@
                                             <td>112年</td>
                                             <td>主計畫</td>
                                             <td>EX112-10802NI</td>
-                                            <td><a href="#" class="text-decoration-none">探討大腦印記體的機轉功能:提供精神及神經疾病新治療策略</a></td>
+                                            <td><a href="cp_reviewCommittee-edit.html" class="text-decoration-none">探討大腦印記體的機轉功能:提供精神及神經疾病新治療策略</a></td>
                                             <td>國立臺灣大學</td>
                                             <td>黃憲松</td>
                                             <td>陳正明</td>
@@ -1087,7 +1087,7 @@
                                                 <span class="badge bg-default text-gray-900">填報中</span>
                                             </td>
                                             <td class="text-nowrap">
-                                                <a href="javascript:;" class="btn btn-warning btn-icon btn-circle"><i class="fa fa-pencil-alt"></i></a>
+                                                <a href="cp_reviewCommittee-edit.html" class="btn btn-warning btn-icon btn-circle"><i class="fa fa-pencil-alt"></i></a>
                                                 <a href="javascript:;" class="btn btn-danger btn-icon btn-circle"><i class="fa fa-times"></i></a>
                                             </td>
                                         </tr>
@@ -1103,7 +1103,7 @@
                                             <td>112年</td>
                                             <td>主計畫</td>
                                             <td>EX112-10803NI</td>
-                                            <td><a href="#" class="text-decoration-none">腦疾病的研究:雙核造血神經元的形成、特徵、角色</a></td>
+                                            <td><a href="cp_reviewCommittee-edit.html" class="text-decoration-none">腦疾病的研究:雙核造血神經元的形成、特徵、角色</a></td>
                                             <td>中國醫藥大學</td>
                                             <td>賴威達</td>
                                             <td>黃小明</td>
@@ -1113,7 +1113,7 @@
                                                 </span>
                                             </td>
                                             <td class="text-nowrap">
-                                                <a href="javascript:;" class="btn btn-warning btn-icon btn-circle"><i class="fa fa-pencil-alt"></i></a>
+                                                <a href="cp_reviewCommittee-edit.html" class="btn btn-warning btn-icon btn-circle"><i class="fa fa-pencil-alt"></i></a>
                                                 <a href="javascript:;" class="btn btn-danger btn-icon btn-circle disabled"><i class="fa fa-times"></i></a>
                                             </td>
                                         </tr>
