--- a/index_list.html
+++ b/index_list.html
@@ -78,6 +78,18 @@
                             
                         </td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td>委員端模擬用</td>
+                        <td>
+                            <ol>
+                                <li>首頁(條列頁)：<a href="template_html/review_home-desktop.html" target="_blank"></a></li>
+                                <li>審核(內頁)：<a href="template_html/review_content-desktop.html" target="_blank"></a></li>
+                                <li>審核(內頁)：<a href="template_html/review_content-tablet.html" target="_blank"></a></li>
+                            </ol>
+                            
+                        </td>
+                    </tr>
                 </tbody>
             </table>
 
