--- a/template_html/cp_reviewCommittee-edit.html
+++ b/template_html/cp_reviewCommittee-edit.html
@@ -152,8 +152,30 @@
 						<div class="menu-divider m-0"></div>
 					</div>
 					<div class="menu-header">功能選單</div>
+					<!--DEMO的選單-->
+					<div class="menu-item has-sub">
+						<a href="javascript:;" class="menu-link">
+							<div class="menu-icon">
+								<i class="fa fa-star"></i>
+							</div>
+							<div class="menu-text">模擬DEMO用</div>
+							<div class="menu-caret"></div>
+						</a>
+						<div class="menu-submenu">
+							<div class="menu-item">
+								<a href="index.html" class="menu-link"><div class="menu-text">首頁儀錶板</div></a>
+							</div>
+							<div class="menu-item">
+								<a href="list_table.html" class="menu-link"><div class="menu-text">計畫清單</div></a>
+							</div>
+							<div class="menu-item">
+								<a href="list_reviewCommittee.html" class="menu-link"><div class="menu-text">審查計畫清單</div></a>
+							</div>
+						</div>
+					</div>
+					<!--正式的選單-->
 					<div class="menu-item">
-						<a href="#" class="menu-link">
+						<a href="index.html" class="menu-link">
 							<div class="menu-icon">
 								<i class="icon-screen-desktop"></i>
 							</div>
@@ -385,7 +407,7 @@
 								</a>
 							</div>
 							<div class="menu-item active">
-								<a href="#" class="menu-link">
+								<a href="list_table.html" class="menu-link">
 									<div class="menu-text">計畫登錄管理(學發處)</div>
 								</a>
 							</div>
@@ -639,7 +661,7 @@
 								</a>
 							</div>
 							<div class="menu-item">
-								<a href="#" class="menu-link">
+								<a href="list_project.html" class="menu-link">
 									<div class="menu-text">院內計畫查詢</div>
 								</a>
 							</div>
@@ -933,7 +955,7 @@
 						</a>
 						<div class="menu-submenu">
 							<div class="menu-item active">
-								<a href="#" class="menu-link">
+								<a href="list_reviewCommittee.html" class="menu-link">
 									<div class="menu-text">聘審作業</div>
 								</a>
 							</div>
@@ -1026,7 +1048,7 @@
                 </div>
                 <div class="col-xl-6 text-end">
                     <div class="dt-buttons btn-group flex-wrap">
-                        <button class="btn btn-primary btn-sm" tabindex="0" aria-controls="data-table-buttons" type="button"><i class="icon-arrow-left"></i> <span>返回前頁</span></button> 
+                        <button class="btn btn-primary btn-sm" tabindex="0" aria-controls="data-table-buttons" type="button" onclick="history.back()"><i class="icon-arrow-left"></i> <span>返回前頁</span></button> 
                     </div>
 
                 </div>
@@ -1798,7 +1820,7 @@
 										<div class="card-body">
 											<ol>
 												<li>2023-08-09 10:33 承辦人 Admin-1：新建(儲存草稿)</li>
-												<li>2023-08-11 17:13 承辦人 Admin-1：送出 <a  href="#modal-message" data-bs-toggle="modal">編修欄位檢視</a></li>
+												<li>2023-08-11 17:13 承辦人 Admin-1：送出 <a href="#modal-message" data-bs-toggle="modal">編修欄位檢視</a></li>
 												<li>2023-08-13 14:21 單位主管 Admin-2：簽核通過</li>
 												<li>2023-08-14 09:34 學發處 Admin-3：簽核通過(確認發布)</li>
 												<li>2023-08-20 10:00 承辦人 Admin-1：指派評審 <a href="#">編修欄位檢視</a></li>
@@ -1817,7 +1839,8 @@
 
 						<div class="row" style="margin-top:15px;">
 							<div class="col-sm-12 text-center" style="margin-top:15px;">
-								<button type="submit" class="btn btn-primary w-100px me-5px">儲存變更</button>
+								<a href="#modal-without-animation" data-bs-toggle="modal" class="btn btn-primary">編修儲存</a>
+								<!--button type="submit" class="btn btn-primary w-100px me-5px">儲存變更</button-->
 								<button type="reset" class="btn btn-default w-100px">重設</button>
 							</div>
 						</div>
@@ -1888,7 +1911,25 @@
 						</div>
 					</div>
 				</div>
-		
+
+				<!-- #modal-without-animation -->
+				<div class="modal" id="modal-without-animation">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title">儲存成功</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+							</div>
+							<div class="modal-body">
+								儲存成功，資料變更已儲存。
+							</div>
+							<div class="modal-footer">
+								<a href="javascript:;" class="btn btn-white" data-bs-dismiss="modal" onclick="window.location.href='list_reviewCommittee.html';">關閉</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				
 		<!-- BEGIN scroll-top-btn -->
 		<a href="javascript:;" class="btn btn-icon btn-circle btn-theme btn-scroll-to-top" data-toggle="scroll-to-top"><i class="fa fa-angle-up"></i></a>
 		<!-- END scroll-top-btn -->
