--- a/template_html/list_project.html
+++ b/template_html/list_project.html
@@ -152,8 +152,30 @@
 						<div class="menu-divider m-0"></div>
 					</div>
 					<div class="menu-header">功能選單</div>
+					<!--DEMO的選單-->
+					<div class="menu-item has-sub">
+						<a href="javascript:;" class="menu-link">
+							<div class="menu-icon">
+								<i class="fa fa-star"></i>
+							</div>
+							<div class="menu-text">模擬DEMO用</div>
+							<div class="menu-caret"></div>
+						</a>
+						<div class="menu-submenu">
+							<div class="menu-item">
+								<a href="index.html" class="menu-link"><div class="menu-text">首頁儀錶板</div></a>
+							</div>
+							<div class="menu-item">
+								<a href="list_table.html" class="menu-link"><div class="menu-text">計畫清單</div></a>
+							</div>
+							<div class="menu-item">
+								<a href="list_reviewCommittee.html" class="menu-link"><div class="menu-text">審查計畫清單</div></a>
+							</div>
+						</div>
+					</div>
+					<!--正式的選單-->
 					<div class="menu-item">
-						<a href="#" class="menu-link">
+						<a href="index.html" class="menu-link">
 							<div class="menu-icon">
 								<i class="icon-screen-desktop"></i>
 							</div>
@@ -385,7 +407,7 @@
 								</a>
 							</div>
 							<div class="menu-item">
-								<a href="#" class="menu-link">
+								<a href="list_table.html" class="menu-link">
 									<div class="menu-text">計畫登錄管理(學發處)</div>
 								</a>
 							</div>
@@ -639,7 +661,7 @@
 								</a>
 							</div>
 							<div class="menu-item">
-								<a href="#" class="menu-link">
+								<a href="list_project.html" class="menu-link">
 									<div class="menu-text">院內計畫查詢</div>
 								</a>
 							</div>
@@ -933,7 +955,7 @@
 						</a>
 						<div class="menu-submenu">
 							<div class="menu-item">
-								<a href="#" class="menu-link">
+								<a href="list_reviewCommittee.html" class="menu-link">
 									<div class="menu-text">聘審作業</div>
 								</a>
 							</div>
