--- a/template_html/review_home.html
+++ b/template_html/review_home.html
@@ -56,7 +56,7 @@
 							<div class="nav">
 								<span class="d-none d-md-inline">歡迎，Liucc, 劉佳淇委員
 									｜
-									<a href="#">登出</a>
+									<a href="login_review.html">登出</a>
 								</span>
 							</div>
 						</div>
@@ -70,15 +70,15 @@
 										<div id="options" class="mb-3">
 											<div class="d-flex flex-wrap text-nowrap mb-n1" style="padding-top:10px;">
 												<a href="#" class="btn btn-white btn-lg border-0 me-1 mb-1 active">全部 (21)</a>
-												<a href="#" class="btn btn-white btn-lg border-0 me-1 mb-1">待審核 (9)</a>
-												<a href="#" class="btn btn-white btn-lg border-0 me-1 mb-1">草稿 (6)</a>
-												<a href="#" class="btn btn-white btn-lg border-0 me-1 mb-1">已送出 (5)</a>
+												<a href="#" class="btn btn-lg border-0 me-1 mb-1 bg-danger text-white">待審核 (9)</a>
+												<a href="#" class="btn btn-lg border-0 me-1 mb-1 bg-yellow">草稿 (6)</a>
+												<a href="#" class="btn btn-lg border-0 me-1 mb-1 bg-green text-white">已送出 (5)</a>
 												<a href="#" class="btn btn-white btn-lg border-0 me-1 mb-1">逾期未審 (1)</a>
 											</div>
 										</div>
 									</div>
 									<div>
-										<div class="w-150px" style="margin:0 20px 0 0;">
+										<div class="w-150px" style="margin:-10px 20px 0 0;">
 											<select class="form-select">
 												<option>112年 (21)</option>
 												<option>111年 (15)</option>
@@ -86,7 +86,7 @@
 											</select>
 										</div>
 									</div>
-									<div>
+									<div style="display:none;">
 										<div class="w-200px">
 											<input type="text" id="nosearch" class="form-control form-control-lg fs-13px" placeholder="請輸入計畫編號或名稱" />
 										</div>
@@ -94,7 +94,7 @@
 								</div>
 								<div class="data-table">
 									<!-- BEGIN table -->
-									<table id="data-table-default" class="table table-striped table-bordered align-middle">
+									<table id="data-table-default" class="table reviewcontent table-striped table-bordered align-middle">
 										<thead>
 											<tr>
 												<th width="1%">&nbsp;</th>
@@ -114,14 +114,14 @@
 												<td>112年</td>
 												<td>主計畫</td>
 												<td>EX112-10802NI</td>
-												<td class="title"><a href="#" class="text-decoration-none">探討大腦印記體的機轉功能:提供精神及神經疾病新治療策略</a></td>
+												<td class="title"><a href="review_content.html" class="text-decoration-none">探討大腦印記體的機轉功能:提供精神及神經疾病新治療策略</a></td>
 												<td>國立臺灣大學</td>
 												<td>2023/9/4 17:00</td>
 												<td>
 													<span class="badge bg-yellow text-black">草稿</span>
 												</td>
 												<td class="text-nowrap">
-													<a href="javascript:;" class="btn btn-warning btn-icon btn-circle"><i class="fa fa-pencil-alt"></i></a>
+													<a href="review_content.html" class="btn btn-warning btn-icon btn-circle"><i class="fa fa-pencil-alt"></i></a>
 												</td>
 											</tr>
 											<tr>
@@ -129,7 +129,7 @@
 												<td>112年</td>
 												<td>子計畫</td>
 												<td>EX112-10821PO</td>
-												<td class="title"><a href="#" class="text-decoration-none">探討大腦印記體的機轉功能:提供精神及神經疾病</a></td>
+												<td class="title"><a href="#" class="text-decoration-none">計畫標題探討大腦印記體的機轉功能:提供精神及神經疾病</a></td>
 												<td>中國醫藥大學</td>
 												<td>2023/9/4 17:00</td>
 												<td>
@@ -145,13 +145,14 @@
 												<td>主計畫</td>
 												<td>EX112-10821PO</td>
 												<td class="title"><a href="#" class="text-decoration-none disabled">探討大腦印記體的機轉功能:提供精神及神經疾病</a></td>
-												<td>國立臺灣大學</td>
+												<td>國立陽明交通大學</td>
 												<td>2023/9/4 17:00</td>
 												<td>
 													<span class="badge bg-green">已送出</span>
 												</td>
 												<td class="text-nowrap">
-													<a href="javascript:;" class="btn btn-warning btn-icon btn-circle disabled"><i class="fa fa-pencil-alt"></i></a>
+													<a href="javascript:;" class="btn btn-info btn-icon btn-circle"><i class="far fa-eye fa-fw"></i></a>
+													<!--a href="javascript:;" class="btn btn-warning btn-icon btn-circle disabled"><i class="fa fa-pencil-alt"></i></a-->
 												</td>
 											</tr>
 											<tr>
@@ -196,7 +197,7 @@
 													<span class="badge bg-green">已送出</span>
 												</td>
 												<td class="text-nowrap">
-													<a href="javascript:;" class="btn btn-warning btn-icon btn-circle disabled"><i class="fa fa-pencil-alt"></i></a>
+													<a href="javascript:;" class="btn btn-info btn-icon btn-circle"><i class="far fa-eye fa-fw"></i></a>
 												</td>
 											</tr>
 											<tr>
@@ -211,7 +212,7 @@
 													<span class="badge bg-secondary">逾期未審</span>
 												</td>
 												<td class="text-nowrap">
-													<a href="javascript:;" class="btn btn-warning btn-icon btn-circle disabled"><i class="fa fa-pencil-alt"></i></a>
+													<a href="javascript:;" class="btn btn-info btn-icon btn-circle"><i class="far fa-eye fa-fw"></i></a>
 												</td>
 											</tr>
 											<tr>
@@ -226,7 +227,7 @@
 													<span class="badge bg-green">已送出</span>
 												</td>
 												<td class="text-nowrap">
-													<a href="javascript:;" class="btn btn-warning btn-icon btn-circle disabled"><i class="fa fa-pencil-alt"></i></a>
+													<a href="javascript:;" class="btn btn-info btn-icon btn-circle"><i class="far fa-eye fa-fw"></i></a>
 												</td>
 											</tr>
 											<tr>
@@ -241,7 +242,7 @@
 													<span class="badge bg-green">已送出</span>
 												</td>
 												<td class="text-nowrap">
-													<a href="javascript:;" class="btn btn-warning btn-icon btn-circle disabled"><i class="fa fa-pencil-alt"></i></a>
+													<a href="javascript:;" class="btn btn-info btn-icon btn-circle"><i class="far fa-eye fa-fw"></i></a>
 												</td>
 											</tr>
 											<tr>
@@ -256,17 +257,17 @@
 													<span class="badge bg-green">已送出</span>
 												</td>
 												<td class="text-nowrap">
-													<a href="javascript:;" class="btn btn-warning btn-icon btn-circle disabled"><i class="fa fa-pencil-alt"></i></a>
+													<a href="javascript:;" class="btn btn-info btn-icon btn-circle"><i class="far fa-eye fa-fw"></i></a>
 												</td>
 											</tr>
 										</tbody>
 									</table>
 									<!-- END table -->
-									<div class="row" style="margin-top: 20px;">
+									<div class="row" style="margin-top: 20px; padding-left: 10px;">
 										<div class="col-sm-12 col-md-5">
 											<div class="dataTables_info" id="data-table-default_info" role="status" aria-live="polite">共 21 筆資料，目前顯示第 1 到 10 筆</div>
 										</div>
-										<div class="col-sm-12 col-md-7">
+										<div class="col-sm-12 col-md-7" style="text-align: right;">
 											<div class="dataTables_paginate paging_simple_numbers" id="data-table-default_paginate">
 												<ul class="pagination">
 													<li class="paginate_button page-item previous disabled" id="data-table-default_previous">
@@ -289,7 +290,7 @@
 						<!-- END pos-content -->
 						
 						<!-- BEGIN pos-sidebar -->
-						<div class="pos-sidebar">
+						<div class="pos-sidebar reviewsidebar">
 							<div class="h-100 d-flex flex-column">
 								<div class="pos-sidebar-header bg-info">
 									<div class="back-btn">
