--- a/index_list.html
+++ b/index_list.html
@@ -34,6 +34,17 @@
                 <tbody>
                     <tr>
                         <td></td>
+                        <td>DEMO用(控制瀏覽器大小)</td>
+                        <td>
+                            <ol>
+                                <li>管理端：<a href="template_html/login.html" target="_blank" onclick="window.open(this.href,'targetWindow', 'toolbar=yes, location=yes, status=no, menubar=no, scrollbars=yes, resizable=yes, left=100, top=100, width=1407px, height=835px');return false;"></a></li>
+                                <li>委員端：<a href="template_html/review_home-demo.html" target="_blank" onclick="window.open(this.href,'targetWindow', 'toolbar=yes, location=yes, status=no, menubar=no, scrollbars=yes, resizable=yes, left=100, top=100, width=1407px, height=835px');return false;"></a></li>
+                            </ol>
+                            
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td class="text-left">管理端：計畫管理</td>
                         <td>
                             <ol>
