--- a/template_html/list_reviewCommittee.html
+++ b/template_html/list_reviewCommittee.html
@@ -1389,44 +1389,8 @@
 								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
 							</div>
 							<div class="modal-body" style="width:100%;">
-								<div class="table-responsive" style="max-height:500px;overflow-y: scroll;">
-									<table class="table table-striped mb-0">
-										<thead>
-											<tr>
-												<th>#</th>
-												<th>欄位</th>
-												<th>變更前</th>
-												<th style="width: 50%;">變更後</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>1</td>
-												<td>標題</td>
-												<td>探討PCNA酪胺酸磷酸化與抗腫瘤免疫的分子機制</td>
-												<td>探討PCNA酪胺酸磷酸化與抗腫瘤免疫的分子機制及其對癌症免疫治療策略的啟示</td>
-											</tr>
-											<tr>
-												<td>2</td>
-												<td>計畫摘要</td>
-												<td>－</td>
-												<td>非受體酪氨酸蛋白激脢JAK 家族不含SH2和SH3 domains，反而含有kinase-like(JH2)和kinase(JH1)domains。JAK家族的成員目前有JAK1、JAK2、JAK3、和Tyk2。JAK家族在許多細胞間質(cytokine)、干擾素、生長荷爾蒙、泌乳激素、和紅血球生成素的信號傳遞上扮演十分重要的角色。目前有關JAK kinase family所有成員之JH2domain具有何種功能並不清楚，過去我們進行鯉魚JAK1之基因選殖與表現，並利用昆虫桿狀病毒表現載體系統生產帶JH2 domain (c-JH2)或JH1 domain(c-JH1) 或 combineddomains (c-JH(1+2))或完整的鯉魚JAK1(c-JAK1)等多種重組蛋白質，並利用病毒雙重感染與免疫沉澱分析，我們發現c-JH1與c-JH2互相結合在一起，而且c-JH(1+2)與c-JAK1都能對c-JH2進行酪氨酸磷酸化作用，因此我們認為以下問題可能十分重要：是否JH2 domain的酪氨酸磷酸化作用在JAKkinase的信號傳遞扮演重要的角色？JH2 domain的酪氨酸磷酸化作用是否可能和JAKkinases的homo- orhete-rodimerization有關？為了解答上述問題，在本年度計劃裡我們打算利用昆虫桿狀病毒表現載體系統以及細胞內放射性標定(in vivo label- ing)，來生產足夠的重組蛋白質(約200-300 ug)以鑑定c-JH2上被c-JAK1或c-JH(1+2)磷酸化的酪氨酸(tyrosine)與c-JH1上自行磷酸化的酪氨酸，並與c-JH(1+2)上自行磷酸化的酪氨酸互相比較；我們也將利用SV40 promoter與COS-7cells表現 c-JH1和c-JH(1+2)，並利用細胞內放射性標定、Trypsindigestion/雙向電泳分析(2D Mapping)，來比較c-JH1與c-JH(1+2)在哺乳類細胞與昆蟲細胞上自行磷酸化的酪氨酸是否相同。其次，由於鯉魚JAK1上JH2 domain所含酪氨酸與人/老鼠 JAK1上 JH2domain所含酪氨酸的位置幾乎相同(共六個酪氨酸)，最後我們將利用site-directedmutagenesis，將老鼠 JAK1上JH2domain鑑定出來會被磷酸化的酪氨酸改變成苯丙氨酸(phenylalanin)，並構築表現載體，利用transfection使U4A cells表現此重組蛋白質，並探討JAKkinase的信號傳遞是否受影響。選擇U4Acells主要因為該細胞的JAK1基因已被破壞。</td>
-											</tr>
-											<tr>
-												<td>3</td>
-												<td>附件</td>
-												<td>－</td>
-												<td>計畫基本資料計畫基本資料計畫基本資料.pdf<br/>
-													計畫經費編列表.pdf<br/>
-													計畫人員簡歷與證明.pdf<br/>
-													單位佐證資料.pdf<br/>
-													計畫經費編列表.pdf<br/>
-													計畫人員簡歷與證明.pdf<br/>
-													單位佐證資料.pdf<br/>
-												主持人佐證資料.pdf</td>
-											</tr>
-										</tbody>
-									</table>
+								<div class="table-responsive" style="max-height:600px;overflow-y:scroll;">
+									<a href="#modal-dialog" data-bs-toggle="modal"><img src="../index_list/assign.png" style="width: 100%;" /></a>
 								</div>
 							</div>
 							<div class="modal-footer" style="width:100%;">
@@ -1436,6 +1400,47 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- #modal-dialog -->
+				<div class="modal fade" id="modal-dialog">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title">儲存送出</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+							</div>
+							<div class="modal-body">
+								<p>
+									指派評審後將無法撤回，評審將可於委員端檢視、評分相關指派的計畫。<br/>
+									確定送出並將計畫指派給評審？
+								</p>
+							</div>
+							<div class="modal-footer">
+								<a href="javascript:;" class="btn btn-white" data-bs-dismiss="modal">取消</a>
+								<a href="#modal-without-animation" class="btn btn-success" data-bs-toggle="modal">確定</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- #modal-without-animation -->
+				<div class="modal" id="modal-without-animation">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title">送出成功</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+							</div>
+							<div class="modal-body">
+								儲存成功，計畫已指派成功。
+							</div>
+							<div class="modal-footer">
+								<a href="javascript:;" class="btn btn-white" data-bs-dismiss="modal" onclick="window.location.href='list_reviewCommittee.html';">關閉</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
 
 		<!-- BEGIN scroll-top-btn -->
 		<a href="javascript:;" class="btn btn-icon btn-circle btn-theme btn-scroll-to-top" data-toggle="scroll-to-top"><i class="fa fa-angle-up"></i></a>
