--- a/template_html/cp_reviewCommittee-edit.html
+++ b/template_html/cp_reviewCommittee-edit.html
@@ -1550,12 +1550,12 @@
 														<label class="form-label col-form-label col-md-3">複審方式</label>
 														<div class="col-md-9 pt-2">
 															<div class="form-check form-check-inline">
-																<input class="form-check-input" type="radio" id="inlineRadio1" name="inlineRadio" checked disabled>
-																<label class="form-check-label text-gray-800" for="inlineRadio1">會議審</label>
+																<input class="form-check-input" type="radio" id="inlineRadio11" name="inlineRadio1">
+																<label class="form-check-label text-gray-800" for="inlineRadio11">會議審</label>
 															</div>
 															<div class="form-check form-check-inline">
-																<input class="form-check-input" type="radio" id="customRadio2" name="inlineRadio" disabled>
-																<label class="form-check-label text-gray-800" for="customRadio2">書審</label>
+																<input class="form-check-input" type="radio" id="customRadio12" name="inlineRadio1">
+																<label class="form-check-label text-gray-800" for="customRadio12">書審</label>
 															</div>
 														</div>
 													</div>
@@ -1689,12 +1689,12 @@
 														<label class="form-label col-form-label col-md-3">核定結果</label>
 														<div class="col-md-9 pt-2">
 															<div class="form-check form-check-inline">
-																<input class="form-check-input" type="radio" id="inlineRadio1" name="inlineRadio" checked>
-																<label class="form-check-label text-gray-800" for="inlineRadio1">通過</label>
+																<input class="form-check-input" type="radio" id="inlineRadio13" name="inlineRadio3">
+																<label class="form-check-label text-gray-800" for="inlineRadio13">通過</label>
 															</div>
 															<div class="form-check form-check-inline">
-																<input class="form-check-input" type="radio" id="customRadio2" name="inlineRadio">
-																<label class="form-check-label text-gray-800" for="customRadio2">不通過</label>
+																<input class="form-check-input" type="radio" id="customRadio14" name="inlineRadio3">
+																<label class="form-check-label text-gray-800" for="customRadio14">不通過</label>
 															</div>
 														</div>
 													</div>
