--- a/template_html/cp_reviewCommittee-alert.html
+++ b/template_html/cp_reviewCommittee-alert.html
@@ -1066,7 +1066,7 @@
                                 </a>
                             </div>
                             <div class="nav-item col">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link disabled" href="#">
                                     <div class="nav-no">2</div>
                                     <div class="nav-text">分派評審(專業審查)</div>
                                 </a>
@@ -1117,13 +1117,13 @@
 								<div class="row mb-15px">
 									<label class="form-label col-form-label col-md-3">計畫摘要</label>
 									<div class="col-md-9">
-										<textarea class="form-control" rows="3"></textarea>
+										<textarea class="form-control" rows="3">非受體酪氨酸蛋白激脢JAK 家族不含SH2和SH3 domains，反而含有kinase-like(JH2)和kinase(JH1)domains。JAK家族的成員目前有JAK1、JAK2、JAK3、和Tyk2。JAK家族在許多細胞間質(cytokine)、干擾素、生長荷爾蒙、泌乳激素、和紅血球生成素的信號傳遞上扮演十分重要的角色。目前有關JAK kinase family所有成員之JH2domain具有何種功能並不清楚，過去我們進行鯉魚JAK1之基因選殖與表現，並利用昆虫桿狀病毒表現載體系統生產帶JH2 domain (c-JH2)或JH1 domain(c-JH1) 或 combineddomains (c-JH(1+2))或完整的鯉魚JAK1(c-JAK1)等多種重組蛋白質，並利用病毒雙重感染與免疫沉澱分析，我們發現c-JH1與c-JH2互相結合在一起，而且c-JH(1+2)與c-JAK1都能對c-JH2進行酪氨酸磷酸化作用，因此我們認為以下問題可能十分重要：是否JH2 domain的酪氨酸磷酸化作用在JAKkinase的信號傳遞扮演重要的角色？JH2 domain的酪氨酸磷酸化作用是否可能和JAKkinases的homo- orhete-rodimerization有關？為了解答上述問題，在本年度計劃裡我們打算利用昆虫桿狀病毒表現載體系統以及細胞內放射性標定(in vivo label- ing)，來生產足夠的重組蛋白質(約200-300 ug)以鑑定c-JH2上被c-JAK1或c-JH(1+2)磷酸化的酪氨酸(tyrosine)與c-JH1上自行磷酸化的酪氨酸，並與c-JH(1+2)上自行磷酸化的酪氨酸互相比較；我們也將利用SV40 promoter與COS-7cells表現 c-JH1和c-JH(1+2)，並利用細胞內放射性標定、Trypsindigestion/雙向電泳分析(2D Mapping)，來比較c-JH1與c-JH(1+2)在哺乳類細胞與昆蟲細胞上自行磷酸化的酪氨酸是否相同。其次，由於鯉魚JAK1上JH2 domain所含酪氨酸與人/老鼠 JAK1上 JH2domain所含酪氨酸的位置幾乎相同(共六個酪氨酸)，最後我們將利用site-directedmutagenesis，將老鼠 JAK1上JH2domain鑑定出來會被磷酸化的酪氨酸改變成苯丙氨酸(phenylalanin)，並構築表現載體，利用transfection使U4A cells表現此重組蛋白質，並探討JAKkinase的信號傳遞是否受影響。選擇U4Acells主要因為該細胞的JAK1基因已被破壞，因此可以比較正常與改變過的JAK1基因在此細胞對干擾素刺激作用是否有所不同？同時也可利用免疫沉澱分析比較在干擾素刺激下，正常與改變過的JAK1與JAK2/Tyk2的結合情形是否受影響。</textarea>
 									</div>
 								</div>
 								<div class="row mb-15px">
 									<label class="form-label col-form-label col-md-3">計畫書</label>
 									<div class="col-md-9">
-										<input class="form-control" type="file" id="formFile" />
+										<input class="form-control is-invalid" type="file" id="formFile" />
 									</div>
 								</div>
                             </form>
