--- a/template_html/cp_reviewCommittee.html
+++ b/template_html/cp_reviewCommittee.html
@@ -1066,7 +1066,7 @@
                                 </a>
                             </div>
                             <div class="nav-item col">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link disabled" href="#">
                                     <div class="nav-no">2</div>
                                     <div class="nav-text">分派評審(專業審查)</div>
                                 </a>
@@ -1107,9 +1107,9 @@
 									<label class="form-label col-form-label col-md-3">計畫期程</label>
 									<div class="col-md-9">
 										<div class="input-group input-daterange">
-                                            <input type="datetime-local" class="form-control" name="start" placeholder="Date Start">
+                                            <input type="date" class="form-control" name="start" placeholder="Date Start">
                                             <span class="input-group-text input-group-addon">至</span>
-                                            <input type="datetime-local" class="form-control" name="end" placeholder="Date End">
+                                            <input type="date" class="form-control" name="end" placeholder="Date End">
                                         </div>
 									</div>
 								</div>
