--- a/template_html/review_content.html
+++ b/template_html/review_content.html
@@ -395,7 +395,7 @@
                                                 </div>
                                                 <div class="row" style="margin-top:0;">
                                                     <div class="col-sm-12 text-center" style="margin-top:15px;">
-                                                        <button type="submit" class="btn btn-primary w-100px me-5px">送出</button>
+                                                        <button type="submit" class="btn btn-primary w-100px me-5px" onclick="window.location.href='review_home.html';">送出</button>
                                                         <button type="button" class="btn btn-default w-100px" onclick="window.location.href='review_home.html';">儲存草稿</button>
                                                     </div>
                                                 </div>
