--- a/template_html/review_home.html
+++ b/template_html/review_home.html
@@ -47,6 +47,18 @@
 									<div class="logo-text text-white">國家衛生研究院計畫評審</div>
 								</a>
 							</div>
+							<div class="navPortrait" style="text-align:right;">
+                                <a href="#" class="navbar-link dropdown-toggle" data-bs-toggle="dropdown" style="text-decoration: none;">
+                                    <img src="../assets/img/user/user-5.png" style="width:35px;"> 
+                                    <span>
+                                        <b class="caret"></b>
+                                    </span>
+                                </a>
+								<a href="#" class="navbar-link dropdown-toggle" data-bs-toggle="dropdown" style="margin-left:10px;">
+                                    <img src="../index_list/hamburger.png" style="width:30px;"> 
+                                </a>
+							</div>
+
 							<div class="time">
 								<div class="d-flex flex-wrap text-nowrap mb-n1">
 									<a href="#" class="btn btn-white btn-lg border-0 me-1 mb-1 text-white active">計畫評審首頁</a>
@@ -390,8 +402,8 @@
 					
 					<!-- BEGIN pos-mobile-sidebar-toggler -->
 					<a href="#" class="pos-mobile-sidebar-toggler" data-toggle-class="pos-sidebar-mobile-toggled" data-target="#pos">
-						<i class="iconify display-6" data-icon="solar:bag-smile-bold-duotone"></i>
-						<span class="badge">5</span>
+						<i class="fa fa-bell fa-2x" data-icon="solar:bag-smile-bold-duotone"></i>
+						<span class="badge">3</span>
 					</a>
 					<!-- END pos-mobile-sidebar-toggler -->
 
