--- a/index_list.html
+++ b/index_list.html
@@ -37,8 +37,8 @@
                         <td>DEMO用(控制瀏覽器大小)</td>
                         <td>
                             <ol>
-                                <li>管理端：<a href="template_html/login.html" target="_blank" onclick="window.open(this.href,'targetWindow', 'toolbar=yes, location=yes, status=no, menubar=no, scrollbars=yes, resizable=yes, left=100, top=100, width=1407px, height=835px');return false;"></a></li>
-                                <li>委員端：<a href="template_html/review_home-demo.html" target="_blank" onclick="window.open(this.href,'targetWindow', 'toolbar=yes, location=yes, status=no, menubar=no, scrollbars=yes, resizable=yes, left=100, top=100, width=1407px, height=835px');return false;"></a></li>
+                                <li>管理端：<a href="template_html/login.html" target="_blank" onclick="window.open(this.href,'targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, left=100, top=100, width=1407px, height=835px');return false;"></a></li>
+                                <li>委員端：<a href="template_html/review_home-demo.html" target="_blank" onclick="window.open(this.href,'targetWindow', 'toolbar=n0, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, left=100, top=100, width=1407px, height=835px');return false;"></a></li>
                             </ol>
                             
                         </td>
