--- a/template_html/list_table.html
+++ b/template_html/list_table.html
@@ -1209,7 +1209,7 @@
 				<div class="col-md-12">
 						<div class="form-group row text-center">
 							<div class="col-lg-12">
-								<button type="submit" class="btn btn-primary" onclick="showFunction()">查詢</button>
+								<button type="submit" class="btn btn-primary" onclick="showFunction();location.reload()">查詢</button>
 								<button type="cancel" class="btn">重設</button>
 							</div>
 						</div>
