--- a/template_html/list_reviewCommittee.html
+++ b/template_html/list_reviewCommittee.html
@@ -1389,13 +1389,209 @@
 								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
 							</div>
 							<div class="modal-body" style="width:100%;">
-								<div class="table-responsive" style="max-height:600px;overflow-y:scroll;">
-									<a href="#modal-dialog" data-bs-toggle="modal"><img src="../index_list/assign.png" style="width: 100%;" /></a>
+								<div class="row" style="width:98%;margin:0 auto 15px;">
+										<div class="col-6">
+											<label class="form-label col-form-label" style="display: block;text-align: left;">委員關鍵字/專業領域</label>
+											<select class="form-select" style="display:inline-block;width:49%;">
+												<option>請選擇</option>
+												<option>2</option>
+												<option>3</option>
+												<option>4</option>
+												<option>5</option>
+											</select>
+											<select class="form-select" style="display:inline-block;width:49%;">
+												<option>請選擇</option>
+												<option>2</option>
+												<option>3</option>
+												<option>4</option>
+												<option>5</option>
+											</select>
+										</div>
+										<div class="col-4">
+											<label class="form-label col-form-label" style="text-align:left">　</label>
+											<input type="email" class="form-control" id="exampleInputEmail2" placeholder="請輸入委員關鍵字" value="">
+										</div>
+										<div class="col-2" style="margin-top: 30px;">
+											<button type="button" class="btn btn-primary w-100px me-5px" onclick="showFunction()">搜尋</button>
+											<script>
+												function showFunction() {
+												  var x = document.getElementById("advSearchDIV");
+												  if (x.style.display === "none") {
+													x.style.display = "flex";
+												  } else {
+													x.style.display = "none";
+												  }
+												}
+											</script>
+										</div>
 								</div>
-							</div>
-							<div class="modal-footer" style="width:100%;">
-								<a href="javascript:;" class="btn btn-white" data-bs-dismiss="modal">關閉</a>
-								<!--a href="javascript:;" class="btn btn-primary">Save Changes</a-->
+								<div class="row table-responsive" style="width:95%;height:500px;overflow-y:scroll;margin:0 auto;display:none;" id="advSearchDIV">
+									<!--a href="#modal-dialog" data-bs-toggle="modal"><img src="../index_list/assign.png" style="width: 100%;" /></a-->
+									<table id="data-table-default" class="table table-striped table-bordered align-middle">
+										<thead>
+											<tr>
+												<th width="1%">&nbsp;</th>
+												<th width="1%" data-orderable="false">
+													<div class="form-check">
+														<input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1">
+														<label class="form-check-label" for="emailCheckbox1"></label>
+													</div>
+												</th>
+												<th class="text-nowrap">委員姓名</th>
+												<th class="text-nowrap">單位</th>
+												<th class="text-nowrap">職稱</th>
+												<th class="text-nowrap">專長領域</th>
+												<th class="text-nowrap">審核紀錄</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold">1</td>
+												<td width="1%">
+													<div class="form-check">
+														<input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1">
+														<label class="form-check-label" for="emailCheckbox1"></label>
+													</div>
+												</td>
+												<td>劉一二</td>
+												<td>國家衛生研究院群體健康科學研究</td>
+												<td>副所長</td>
+												<td>社區衛生及基層醫療實務、臨床流行病學</td>
+												<td>112年已分派: <b class="text-danger">15</b> 件 (待審: 12 件)<br/>
+													近3年: 共 54 件</td>
+											</tr>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold">２</td>
+												<td width="1%">
+													<div class="">
+														<!--input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1">
+														<label class="form-check-label" for="emailCheckbox1"></label-->
+														<i class="fas fa-lg fa-circle-exclamation text-danger" alt="所選擇的計畫可能有利益迴避衝突"></i>
+													</div>
+												</td>
+												<td>林十二</td>
+												<td>國家衛生研究院群體健康科學研究</td>
+												<td>副所長</td>
+												<td>社區衛生及基層醫療實務、臨床流行病學</td>
+												<td>112年已分派: <b class="text-danger">15</b> 件 (待審: 12 件)<br/>
+													近3年: 共 54 件</td>
+											</tr>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold">3</td>
+												<td width="1%">
+													<div class="form-check">
+														<input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1">
+														<label class="form-check-label" for="emailCheckbox1"></label>
+													</div>
+												</td>
+												<td>陳二賜</td>
+												<td>國家衛生研究院群體健康科學研究</td>
+												<td>副所長</td>
+												<td>社區衛生及基層醫療實務、臨床流行病學</td>
+												<td>112年已分派: <b class="text-danger">15</b> 件 (待審: 12 件)<br/>
+													近3年: 共 54 件</td>
+											</tr>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold">4</td>
+												<td width="1%">
+													<div class="form-check">
+														<input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1">
+														<label class="form-check-label" for="emailCheckbox1"></label>
+													</div>
+												</td>
+												<td>黃二時</td>
+												<td>國家衛生研究院群體健康科學研究</td>
+												<td>副所長</td>
+												<td>社區衛生及基層醫療實務、臨床流行病學</td>
+												<td>112年已分派: <b class="text-danger">15</b> 件 (待審: 12 件)<br/>
+													近3年: 共 54 件</td>
+											</tr>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold"></td>
+												<td width="1%">
+													<div class="form-check">
+													</div>
+												</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+											</tr>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold"></td>
+												<td width="1%">
+													<div class="form-check">
+													</div>
+												</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+											</tr>
+										</tbody>
+									</table>
+									<div class="col-lg-12 text-center" style="margin-bottom: 25px;">
+										<a href="#" class="btn btn-primary">加入</a>
+										<button type="cancel" class="btn">移除</button>
+									</div>	
+									<table id="data-table-default" class="table table-striped table-bordered align-middle">
+										<caption>已選入清單</caption>
+										<thead>
+											<tr>
+												<th width="1%">&nbsp;</th>
+												<th width="1%" data-orderable="false">
+													<div class="form-check">
+														<input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1">
+														<label class="form-check-label" for="emailCheckbox1"></label>
+													</div>
+												</th>
+												<th class="text-nowrap">委員姓名</th>
+												<th class="text-nowrap">單位</th>
+												<th class="text-nowrap">職稱</th>
+												<th class="text-nowrap">專長領域</th>
+												<th class="text-nowrap">審核紀錄</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold">1</td>
+												<td width="1%">
+													<div class="form-check">
+														<input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1" checked>
+														<label class="form-check-label" for="emailCheckbox1"></label>
+													</div>
+												</td>
+												<td>劉一二</td>
+												<td>國家衛生研究院群體健康科學研究</td>
+												<td>副所長</td>
+												<td>社區衛生及基層醫療實務、臨床流行病學</td>
+												<td>112年已分派: <b class="text-danger">15</b> 件 (待審: 12 件)<br/>
+													近3年: 共 54 件</td>
+											</tr>
+											<tr class="odd gradeX">
+												<td width="1%" class="fw-bold">4</td>
+												<td width="1%">
+													<div class="form-check">
+														<input type="checkbox" class="form-check-input" data-checked="email-checkbox" id="emailCheckbox1">
+														<label class="form-check-label" for="emailCheckbox1"></label>
+													</div>
+												</td>
+												<td>鄭大名</td>
+												<td>國家衛生研究院群體健康科學研究</td>
+												<td>副所長</td>
+												<td>社區衛生及基層醫療實務、臨床流行病學</td>
+												<td>112年已分派: <b class="text-danger">15</b> 件 (待審: 12 件)<br/>
+													近3年: 共 54 件</td>
+											</tr>
+										</tbody>
+									</table>
+									<div class="col-lg-12 text-center">
+										<a href="#modal-dialog" data-bs-toggle="modal" class="btn btn-primary">確定分派</a>
+										<a href="javascript:;" class="btn btn-white" data-bs-dismiss="modal">關閉</a>
+									</div>	
+								</div>
 							</div>
 						</div>
 					</div>
